--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -6,6 +6,8 @@
 @import "~vuetify/dist/vuetify.min.css";
 @import '~vuetify/src/styles/styles.sass';
 
+@import '~sweetalert2/dist/sweetalert2.min.css';
+
 
 @import "./dashboard/dashboard";
 
